maybe meta tag unnecessary?

--- a/qb2-wa/manifest.json
+++ b/qb2-wa/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "TriMkQb2WA",
-  "short_name": "qb2wa",
+  "name": "TriMkQb2WA-2",
+  "short_name": "qb2wa2",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#fff",
